[project]
name = "wheel-screener"
version = "0.1.0"
description = "Cash-secured-put / wheel options screener"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "tenacity>=8.4",
    "typer>=0.12",
    "polars>=1.0",
    "schwab-py>=1.5",
]

[project.optional-dependencies]
fmp = ["fmp-data>=2.3"]
greeks = ["py-vollib-vectorized>=0.1.1"]
api = ["fastapi>=0.111", "uvicorn>=0.30"]

[project.scripts]
wheel-screener = "wheel_screener.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wheel_screener"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI/Typer idiomatically use these calls as argument defaults.
extend-immutable-calls = ["fastapi.Depends", "typer.Option", "typer.Argument"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
